updat some contents

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
  <head>
-     <title>Your Name Goes Here</title>
+     <title>Jawad Naimi</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <link rel="stylesheet" href="css/main.css">
@@ -10,13 +10,13 @@
  </head>
  <body>
      <header>
-     <h1>Your Name Goes Here</h1>
+     <h1 class="page-header">Jawad Naimi</h1>
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
+            <a href="https://naimij.github.io/styling-with-css/" target="_blank">Styling with CSS</a>
             <a href="#" target="_blank">Name of project goes here</a>
-            <a href="#" target="_blank">Name of project goes here</a>
-            <a href="#" target="_blank">GitHub</a>
-            <a href="#" target="_blank">LinkedIn</a>
+            <a href="https://github.com/naimij" target="_blank">GitHub</a>
+            <a href="https://www.linkedin.com/in/jawadnaimi/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
      </header>
