added the positioning

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <nav class="topnav" id="myTopnav">
             <a href="index.html" class="active">Home</a>
             <a href="https://naimij.github.io/styling-with-css/" target="_blank">Styling with CSS</a>
-            <a href="#" target="_blank">Name of project goes here</a>
+            <a href="https://naimij.github.io/Positioning-/" target="_blank">Positioning</a>
             <a href="https://github.com/naimij" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/jawadnaimi/" target="_blank">LinkedIn</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
