--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
             <a href="https://naimij.github.io/Positioning-/" target="_blank">Positioning</a>
             <a href="https://github.com/naimij" target="_blank">GitHub</a>
             <a href="https://www.linkedin.com/in/jawadnaimi/" target="_blank">LinkedIn</a>
+            <a href="https://naimij.github.io/time-of-day/" target="_blank">Time of Day</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
         </nav>
      </header>
