added the daily grind

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
             <a href="https://www.linkedin.com/in/jawadnaimi/" target="_blank">LinkedIn</a>
             <a href="https://naimij.github.io/time-of-day/" target="_blank">Time of Day</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+            <a href="https://naimij.github.io/daily-grind/" target="_blank">Daily Grind</a>
         </nav>
      </header>
      
