--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
             <a href="https://naimij.github.io/time-of-day/" target="_blank">Time of Day</a>
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             <a href="https://naimij.github.io/daily-grind/" target="_blank">Daily Grind</a>
+            <a href="https://naimij.github.io/dom-play/" target="_blank">DOM Play</a>
         </nav>
      </header>
      
