--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
             <a href="https://naimij.github.io/daily-grind/" target="_blank">Daily Grind</a>
             <a href="https://naimij.github.io/dom-play/" target="_blank">DOM Play</a>
+            <a href="https://naimij.github.io/guess-the-number/" target="_blank">Guess The Number</a>
         </nav>
      </header>
      
