added the form template project

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <a href="https://naimij.github.io/daily-grind/" target="_blank">Daily Grind</a>
             <a href="https://naimij.github.io/dom-play/" target="_blank">DOM Play</a>
             <a href="https://naimij.github.io/guess-the-number/" target="_blank">Guess The Number</a>
+            <a href="https://naimij.github.io/form-template/" target="_blank">Form Template</a>
         </nav>
      </header>
      
