--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <a href="https://naimij.github.io/dom-play/" target="_blank">DOM Play</a>
             <a href="https://naimij.github.io/guess-the-number/" target="_blank">Guess The Number</a>
             <a href="https://naimij.github.io/form-template/" target="_blank">Form Template</a>
+            <a href="https://naimij.github.io/data-processing/" target="_blank">Data Processing</a>
         </nav>
      </header>
      
