added some more staff

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
             <a href="https://naimij.github.io/guess-the-number/" target="_blank">Guess The Number</a>
             <a href="https://naimij.github.io/form-template/" target="_blank">Form Template</a>
             <a href="https://naimij.github.io/data-processing/" target="_blank">Data Processing</a>
+            <a href="https://naimij.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
+            <a href="https://random-quotes-ajax.naimij.repl.co/ajax_headline1.htm" target="_blank">AJAX</a>
         </nav>
      </header>
      
@@ -42,7 +44,7 @@
 
      <footer>
       <p><small>&copy; 2021-<span id="this-year"></span> by 
-          YOUR NAME HERE, All Rights Reserved ~ 
+          Jawad Naimi, All Rights Reserved ~ 
           <a id="html-checker" href="#" target="_blank">Check HTML</a> ~ 
           <a id="css-checker" href="#" target="_blank">Check CSS</a></small>
      </p>
