added pet adoption agency

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
             <a href="https://naimij.github.io/data-processing/" target="_blank">Data Processing</a>
             <a href="https://naimij.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
             <a href="https://random-quotes-ajax.naimij.repl.co/ajax_headline1.htm" target="_blank">AJAX</a>
+            <a href="https://pet-adoption-agency.naimij.repl.co/index.php" target="_blank">Pet Adoption Agency</a>
+
         </nav>
      </header>
      
