added a new link

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <a href="https://naimij.github.io/seasonal-styles/" target="_blank">Seasonal Styles</a>
             <a href="https://random-quotes-ajax.naimij.repl.co/ajax_headline1.htm" target="_blank">AJAX</a>
             <a href="https://pet-adoption-agency.naimij.repl.co/index.php" target="_blank">Pet Adoption Agency</a>
+            <a href="https://painting-web-service.naimij.repl.co/" target="_blank">Painting Web Service</a>
 
         </nav>
      </header>
