added the new link

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <a href="https://random-quotes-ajax.naimij.repl.co/ajax_headline1.htm" target="_blank">AJAX</a>
             <a href="https://pet-adoption-agency.naimij.repl.co/index.php" target="_blank">Pet Adoption Agency</a>
             <a href="https://painting-web-service.naimij.repl.co/" target="_blank">Painting Web Service</a>
+            <a href="https://templating-with-ejs.naimij.repl.co/" target="_blank">Templating with EJS</a>
 
         </nav>
      </header>
